--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -88,7 +88,19 @@
     font-size: 60px;
   }
 
+  .contact-container > h2 {
+    font-size: 20px;
+  }
+
   .contact-container > p {
-    font-size: 30px;
+    font-size: 18px;
+  }
+
+  .contact-container > p2 {
+    font-size: 18px;
+  }
+
+  .contact-container > a {
+    font-size: 18px;
   }
 }
