adaptive text size

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -10,6 +10,7 @@
   box-shadow: inset 0 0 0 100% rgba(0, 0, 0, 0.1);
   object-fit: contain;
   margin-top: -80px;
+  min-height: 500px;
 }
 
 .about-container > h1 {
