--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -10,7 +10,7 @@
   object-fit: contain;
   margin-top: -10px;
   margin-top: -10px;
-  /* max-width: 1500px; */ 
+  min-height: 500px;
 }
 
 .contact-container > div {
