--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -11,6 +11,7 @@
   box-shadow: inset 0 0 0 100% rgba(0, 0, 0, 0.1);
   object-fit: contain;
   margin-top: -80px;
+  min-height: 500px;
   /* max-width: 1300px; */
 }
 
