--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -15,6 +15,7 @@
 
 .contact-container > div {
   max-width: 700px;
+  align-items: flex-start;
 }
 
 .contact-container > h1 {
@@ -67,6 +68,7 @@
   color: #FFC800;
   font-size: 32px;
   text-align: left;
+  align-items: flex-start;
   margin-left: 70px;
   margin-right: 70px;
   /* text-shadow: #000 1px 1px 2px; */
@@ -75,6 +77,44 @@
 
 .contact-btns {
   margin-top: 32px;
+}
+
+.icon::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+.btn-- {
+  color: white;
+  border: none;
+  max-width: 60px;
+  width: 3vw;
+  min-width: 50px;
+  height: 3vw;
+  min-height: 50px;
+  max-height: 60px;
+  margin: 3px;
+  border-radius: 50%;
+}
+
+.btn-f {
+  background-color: #3b5998;
+}
+
+.btn-i {
+  background-color: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+}
+
+.btn-l {
+  background-color: #0976b4;
+}
+
+.btn--:hover {
+  opacity: 0.5;
 }
 
 @media screen and (max-width: 960px) {
